added users/ endpoints
